Implement CreateBot
