# db/models.go
@@ -1,0 +1,22 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.29.0
+
+package db
+
+import (
+	"database/sql"
+)
+
+type Bot struct {
+	ID             int32          `db:"id" json:"id"`
+	UserID         string         `db:"user_id" json:"user_id"`
+	BasicID        sql.NullString `db:"basic_id" json:"basic_id"`
+	ChatMode       string         `db:"chat_mode" json:"chat_mode"`
+	DisplayName    string         `db:"display_name" json:"display_name"`
+	MarkAsReadMode string         `db:"mark_as_read_mode" json:"mark_as_read_mode"`
+	PictureUrl     sql.NullString `db:"picture_url" json:"picture_url"`
+	PremiumID      sql.NullString `db:"premium_id" json:"premium_id"`
+	CreatedAt      sql.NullTime   `db:"created_at" json:"created_at"`
+	UpdatedAt      sql.NullTime   `db:"updated_at" json:"updated_at"`
+}
